--- a/templates/index.html
+++ b/templates/index.html
@@ -365,7 +365,7 @@
                                 <li><i class="fas fa-check text-success me-2"></i>PNG format</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Basic colors</li>
                             </ul>
-                            <a href="#" class="btn btn-outline-primary btn-sm">Start Free</a>
+                            <a href="https://rapidapi.com/tayyabhussain12/api/qr-code-generator-api-pro" class="btn btn-outline-primary btn-sm">Start Free</a>
                         </div>
                     </div>
                 </div>
@@ -393,7 +393,7 @@
                                 <li><i class="fas fa-check text-success me-2"></i>Custom colors</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Logo support</li>
                             </ul>
-                            <a href="#" class="btn btn-primary btn-sm">Choose Plan</a>
+                            <a href="https://rapidapi.com/tayyabhussain12/api/qr-code-generator-api-pro" class="btn btn-primary btn-sm">Choose Plan</a>
                         </div>
                     </div>
                 </div>
@@ -421,7 +421,7 @@
                                 <li><i class="fas fa-check text-success me-2"></i>High resolution</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Priority queue</li>
                             </ul>
-                            <a href="#" class="btn btn-primary btn-sm">Choose Plan</a>
+                            <a href="https://rapidapi.com/tayyabhussain12/api/qr-code-generator-api-pro" class="btn btn-primary btn-sm">Choose Plan</a>
                         </div>
                     </div>
                 </div>
@@ -449,7 +449,7 @@
                                 <li><i class="fas fa-check text-success me-2"></i>Batch processing</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Email support</li>
                             </ul>
-                            <a href="#" class="btn btn-primary btn-sm">Best Value</a>
+                            <a href="https://rapidapi.com/tayyabhussain12/api/qr-code-generator-api-pro" class="btn btn-primary btn-sm">Best Value</a>
                         </div>
                     </div>
                 </div>
@@ -477,7 +477,7 @@
                                 <li><i class="fas fa-check text-success me-2"></i>Priority support</li>
                                 <li><i class="fas fa-check text-success me-2"></i>SLA guarantee</li>
                             </ul>
-                            <a href="#" class="btn btn-outline-primary btn-sm">Contact Sales</a>
+                            <a href="https://rapidapi.com/tayyabhussain12/api/qr-code-generator-api-pro" class="btn btn-outline-primary btn-sm">Contact Sales</a>
                         </div>
                     </div>
                 </div>
@@ -507,7 +507,7 @@
                     <p class="mb-0">Available on <strong>RapidAPI</strong></p>
                     <div class="mt-2">
                         <a href="{{ url_for('api_docs') }}" class="text-white me-3">API Documentation</a>
-                        <a href="#" class="text-white">Support</a>
+                        <a href="https://rapidapi.com/tayyabhussain12/api/qr-code-generator-api-pro" class="text-white">Support</a>
                     </div>
                 </div>
             </div>
